[tool.poetry]
name = "adhd-european-drug-map"
version = "0.1.0"
description = ""
authors = ["thiswillbeyourgithub <26625900+thiswillbeyourgithub@users.noreply.github.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.9"
fire = ">=0.5.0"
joblib = ">=1.3.2"
plotly = ">=5.18.0"
pandas = ">=2.2.0"
openpyxl = "^3.1.5"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
